# tempy

./: .gitignore  LICENSE  docker-compose.yaml
.github/workflows/: rust.yml
WiFiWebClient/: WiFiWebClient.ino
timeseries-service/: .gitignore  Cargo.toml  Dockerfile  gettemp.http  package-lock.json  package.json  postrangetemp.http  posttemp.http  tailwind.config.js
timeseries-service/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
timeseries-service/src/templates/: mod.rs
timeseries-service/static/: tailwind.css
timeseries-service/templates/: base.html  index.html
timeseries-simulator/: .gitignore  Cargo.toml
timeseries-simulator/src/: main.rs  simulator.rs
