[package]
name = "timeseries-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.11.5"
log = "0.4.22"
influxdb = { version = "0.7.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
askama = "0.11.1"